agregado de uso de método

--- a/taller6to/exp.ipynb
+++ b/taller6to/exp.ipynb
@@ -34,36 +34,9 @@
     "#dfSinFilasConNaN = df.dropna()\n",
     "#df['sexo'].value_counts()\n",
     "#df_2 = df.drop_duplicates()\n",
-    "#df.dropna(inplace=True)"
+    "#df.dropna(inplace=True)",
+    "#df.to_csv(\"nuevo.csv\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
