descomentado de líneas

--- a/taller6to/exp.ipynb
+++ b/taller6to/exp.ipynb
@@ -24,18 +24,18 @@
     "\n",
     "import pandas as pd\n",
     "df = pd.read_csv(\"datos_nomivac_covid19.csv\")\n",
-    "#print(df)\n",
-    "#print(list(df.columns))\n",
-    "#print(list(df.index))\n",
-    "#print(df['grupo_etario'])\n",
-    "#df.loc[0:1000]\n",
-    "#df.loc[[1,5,8]]\n",
-    "#dfConIndiceDNI = df.set_index('DNI')\n",
-    "#dfSinFilasConNaN = df.dropna()\n",
-    "#df['sexo'].value_counts()\n",
-    "#df_2 = df.drop_duplicates()\n",
-    "#df.dropna(inplace=True)",
-    "#df.to_csv(\"nuevo.csv\")\n"
+    "print(df)\n",
+    "print(list(df.columns))\n",
+    "print(list(df.index))\n",
+    "print(df['grupo_etario'])\n",
+    "df.loc[0:1000]\n",
+    "df.loc[[1,5,8]]\n",
+    "dfConIndiceDNI = df.set_index('DNI')\n",
+    "dfSinFilasConNaN = df.dropna()\n",
+    "df['sexo'].value_counts()\n",
+    "df_2 = df.drop_duplicates()\n",
+    "df.dropna(inplace=True)",
+    "df.to_csv(\"nuevo.csv\")\n"
    ]
   },
   {
