arreglo de lineamiento

--- a/taller6to/exp.ipynb
+++ b/taller6to/exp.ipynb
@@ -34,7 +34,7 @@
     "dfSinFilasConNaN = df.dropna()\n",
     "df['sexo'].value_counts()\n",
     "df_2 = df.drop_duplicates()\n",
-    "df.dropna(inplace=True)",
+    "df.dropna(inplace=True)\n",
     "df.to_csv(\"nuevo.csv\")\n"
    ]
   },
